
Refactored cli_ads_search() to use promp_toolkit.prompt(), enabling
autocompleter. Added '-n' argument to request next chunk of entries.
Added tests for cli_ads_search().

*****

Fixed script to launch tests in travis file.

*****

Added install -e line in travis file.

*****

Fixed typo in setup.py, requests-mock module name in test_requires.

*****

Added explicit requests-mock install command in travis file.


*****  Sun Apr 14 10:36:44 CEST 2019  *****

Added auto-suggest for the auto-complete word list in cli_search()
and cli_ads_search().  Replaced prompt_toolkit.prompt() with a
prompt_toolkit.PromptSession.prompt() call.
Moved search_completer and ads_completer WordCompleters form
__main__.py into utils.
Added AutoSuggestCompleter() class into utils to handle the
suggestions.
Added mock_prompt_session() fixture into conftests.py to monkeypatch
a PromptSession object.
Updated tests accordingly.

*****

Added history to cli_search() and cli_ads_search() prompts.
Added path to history files in utils.

*****

Update docs.
Minor tweaks here and there.

*****

Bumped bibmanager version to 1.1.0.
Next merge resolves #32
Although this does not resolve the original idea of enabling
autocomplete for the main bibm command-line calls, it adds very
convenient auto-complete help in searches. So I will close #28

*****

Updated Zenodo links.

*****

Bumped bibmanager version to 1.1.1.


*****  Sat May 25 21:43:36 CEST 2019  *****

Refactored bm.merge() to accept base argument.  When provided
merge new entries into base, rather than into the BM database.
Also, bm.merge() now returns the merged list of entries.
Tested.

*****

Refactored am.update() to accept base argument. When provided,
ads-update entries in base rather than the BM database entries.
Also, am.update() now returns the updated list of entries.


*****  Mo 27. Mai 09:06:02 CEST 2019  *****

Modified Bib.eprint to keep only the ID (remove 'arxiv' and
'astro-ph' preamble) to prevent duplicate non-detections.
